# MatricCalc

./: Readme.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/matrixcalc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: matrix_lib.cpp  matrix_lib.h
app/src/main/java/com/example/matrixcalc/: MainActivity.kt
app/src/main/java/com/example/matrixcalc/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/matrixcalc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
